index.html skeleton set up & first styles added to the keyboard's container & JS file added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/keyboard/keyboard.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <h1>Vanilla JS Virtual Keyboard App</h1>
     <h2>Built with HTML, CSS & Vanilla JS</h2>
 
-    <textarea></textarea>
+    <textarea style="position: absolute; top: 130px; right: 30px; width: 300px;"></textarea>
+
+    <div class="keyboard">
+      <div class="keyboard__keys">
+
+      </div>
+    </div>
+
+    <script src="/keyboard/keyboard.js"></script>
   </body>
 </html>
