--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="stylesheet" href="/keyboard/keyboard.css">
+    <!-- <link rel="stylesheet" href="./assets/styles.css"> -->
+    <link rel="stylesheet" href="./keyboard/keyboard.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
@@ -18,8 +18,14 @@
     <div class="keyboard">
       <div class="keyboard__keys">
         <button type="button" class="keyboard__key">a</button>
-        <button type="button" class="keyboard__key">
+        <button type="button" class="keyboard__key keyboard__key--wide">
           <i class="material-icons">backspace</i>
+        </button>
+        <button type="button" class="keyboard__key keyboard__key--extra-wide">
+          <i class="material-icons">space_bar</i>
+        </button>
+        <button type="button" class="keyboard__key keyboard__key--wide keyboard__key--activatable">
+          <i class="material-icons">keyboard_capslock</i>
         </button>
       </div>
     </div>
